# Backtesting_LLM_Selector

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: Dockerfile  README.md  alembic.ini  celerybeat-schedule  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 2720dadfc4f1_initial.py  89c935068e4e_p10_google_id_nullable_adr0006.py  e332ea7d1de0_f2_5_initial_schema_8_tables.py
backend/app/: config.py  dependencies.py  main.py
backend/app/application/access/: authenticate_with_google.py  bootstrap_admin.py  get_user_by_access_token.py  register_user.py
backend/app/application/backtesting/: cancel_backtest.py  create_backtest.py  get_backtest.py  get_result_and_snapshot.py  list_backtests.py
backend/app/application/screening/: get_company.py  get_matrix.py  get_picks_for_week.py  list_companies.py  list_weeks.py
backend/app/domain/access/: exceptions.py  google_identity.py  ports.py  (+2 more)
backend/app/jobs/: run_backtest.py  worker.py
backend/app/models/: __init__.py  backtest.py  job.py  signal.py  ticker.py  upload.py  user.py  workspace.py
backend/app/routers/: auth.py  backtests.py  jobs.py  signals.py  uploads.py  workspaces.py
backend/app/schemas/: auth.py  backtest.py  signal.py  ticker.py  upload.py  workspace.py
backend/app/services/: backtest_engine.py  parser_service.py  yahoo_service.py
backend/app/tasks/: __init__.py  backtest_tasks.py  parse_tasks.py  price_tasks.py
backend/app/utils/: s3.py  security.py
backend/tests/: conftest.py
backend/tests/e2e/: test_api_error_paths.py  test_auth_and_admin.py  test_backtests_api.py  test_health.py  test_screening_api.py
backend/tests/integration/: fake_yfinance.py  test_analysis_acl.py  test_backtest_repository.py  test_db_cancellation_token.py  test_price_cache_warmup.py  test_run_backtest_task.py  test_schema.py  test_user_repository_and_bootstrap.py
(+160 files in other folders)
