[project]
name = "backtesting-llm-selector"
version = "0.1.0"
description = "Backend for LLM portfolio backtesting platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "psycopg2-binary>=2.9",
    "alembic>=1.14",
    "celery[redis]>=5.4",
    "redis>=5.0",
    "boto3>=1.35",
    "python-jose[cryptography]>=3.3",
    "google-auth>=2.35",
    "google-auth-httplib2>=0.2",
    "httpx>=0.27",
    "python-multipart>=0.0.12",
    "openpyxl>=3.1",
    "yfinance>=0.2",
    "pandas>=2.2",
    "numpy>=2.0",
    "pydantic-settings>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
